--- a/manual/src/main/paradox/_template/css/page.css
+++ b/manual/src/main/paradox/_template/css/page.css
@@ -955,3 +955,19 @@ small {
   margin-right: 10px;
   margin-top: 10px;
 }
+
+.title-wrapper {
+  display: flex;
+}
+
+p {
+  text-align: justify;
+}
+
+.centered-img {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
