--- a/daikoku/javascript/src/style/components/consumptions.scss
+++ b/daikoku/javascript/src/style/components/consumptions.scss
@@ -1,3 +1,5 @@
+@import '../variables.scss';
+
 .data-vizualisation {
   border: 1px solid lightgray;
   border-radius: 10px;
@@ -13,7 +15,8 @@
       display: block;
       cursor: pointer;
       padding: 15px;
-      background-color: #dfe6ec;
+      background-color: $navbar-bg-color;
+      color: $navbar-brand-color;
       margin-right: 1px;
 
       &:nth-of-type(1) {
@@ -21,8 +24,8 @@
       }
 
       &.data__navbar__tab--active {
-        background-color: #7f96af;
-        color: #fff;
+        background-color: $menu-text-hover-bg-color;
+        color: $menu-text-hover-color;
       }
 
 
@@ -76,13 +79,21 @@
     justify-content: center;
     align-items: flex-start;
 
-    color: rgb(32, 37, 41);
-    background-color: rgb(231, 236, 239);
+    color: $body-text-color;
+    background-color: $navbar-bg-color;
     font-family: Arial, Helvetica, "Open Sans", sans-serif, monospace;
     //font-size: 25pt;
     text-align: center;
     overflow-wrap: break-word;
     word-break: break-word;
     hyphens: auto;
+  }
+
+  .card-body {
+    border: none;
+    background-color: $menu-bg-color;
+    margin: 0;
+    height: 250px;
+    overflow: scroll;
   }
 }
