--- a/daikoku/javascript/src/style/components/modal.scss
+++ b/daikoku/javascript/src/style/components/modal.scss
@@ -1,10 +1,11 @@
 @import '../variables';
 
 .modal-header{
-  background-color: #7f96af;
+  background-color: $navbar-bg-color;
+  color: $navbar-brand-color;
 }
 .modal-body,.modal-footer{
-  background-color: #fff;
+  background-color: $body-bg-color;
 }
 .modal-content{
   background-color: initial;
@@ -42,13 +43,11 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-color: #fff;
-  color: black;
+  color: $body-text-color;
 
   .team-selection {
     display: flex;
     flex-direction: row;
-    // justify-content: space-between;
     align-items: center;
     width: 100%;
     padding: .5rem 1rem;
