--- a/daikoku/javascript/src/style/layout/sidebar.scss
+++ b/daikoku/javascript/src/style/layout/sidebar.scss
@@ -47,28 +47,23 @@
 
 .sidebar .nav-link {
   font-weight: 500;
-  color: #333;
+  color: $additionalContent-text-color;
 }
 
-.sidebar .nav-link svg {
-  margin-right: 4px;
-  color: #999;
-  width: 16px;
-  height: 16px;
-  vertical-align: text-bottom;
+.sidebar .nav-link .fas {
+  width: 20px;
+  margin-right: 0.25rem;
 }
 
 .sidebar .nav-link.active,.sidebar .nav-link.active .fas  {
   color: $link-color;
+  background-color: $menu-text-hover-bg-color;
 }
 
 .sidebar .nav-link.active .nav-icon {
   fill: $link-color;
 }
 
-.sidebar .nav-link .fas{
-    color: #999;
-}
 .sidebar .nav-link:hover .feather,.sidebar .nav-link:hover .fas,
 .sidebar .nav-link.active .feather {
   color: inherit;
