--- a/daikoku/javascript/src/style/components/consumptions.scss
+++ b/daikoku/javascript/src/style/components/consumptions.scss
@@ -16,7 +16,7 @@
       cursor: pointer;
       padding: 15px;
       background-color: $navbar-bg-color;
-      color: $navbar-brand-color;
+      color: $navbar-text-color;
       margin-right: 1px;
 
       &:nth-of-type(1) {
