--- a/daikoku/javascript/src/style/components/modal.scss
+++ b/daikoku/javascript/src/style/components/modal.scss
@@ -2,7 +2,7 @@
 
 .modal-header{
   background-color: $navbar-bg-color;
-  color: $navbar-brand-color;
+  color: $navbar-text-color;
 }
 .modal-body,.modal-footer{
   background-color: $body-bg-color;
