--- a/daikoku/javascript/src/style/layout/style.scss
+++ b/daikoku/javascript/src/style/layout/style.scss
@@ -55,9 +55,9 @@ a:hover {
 main {
   background-color: $body-bg-color;
 
-  .jumbotron {
-    background-color: #fff;
-  }
+  // .jumbotron {
+  //   background-color: #fff;
+  // }
 }
 
 .fa-xxs {
