--- a/daikoku/javascript/src/style/layout/login.scss
+++ b/daikoku/javascript/src/style/layout/login.scss
@@ -1,8 +1,33 @@
+@import '../variables.scss';
+
 /* login */
 .login #app {
   padding-top: 60px;
   padding-bottom: 20px;
+
+    .login__container {
+      background-color: $menu-bg-color;
+
+      .organisation__header {
+        border-bottom: 1px solid $section-bottom-color;
+        position: relative;
+        background-color: $section-bg-color;
+        color:$section-text-color;
+        margin-bottom: 15px;
+        padding-bottom: 15px;
+
+        .organisation__avatar {
+          width: 150px;
+        }
+      }
+
+      form {
+        padding: 5px 15px;
+      }
+    }
 }
+
+
 
 .container.login {
   max-width: 730px;
