Add a way to customize font family

--- a/daikoku/javascript/src/style/layout/style.scss
+++ b/daikoku/javascript/src/style/layout/style.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: Raleway, Helvetica, sans-serif;
+  font-family: Custom, Raleway, Helvetica, sans-serif;
   background-color: $body-bg-color;
   color:$body-text-color;
 }
