--- a/daikoku/app/views/error.scala.html
+++ b/daikoku/app/views/error.scala.html
@@ -26,7 +26,7 @@
           <div class="container-fluid d-flex justify-content-center justify-content-sm-between"><a href="/" class="navbar-brand d-flex align-items-center" style="color: var(--navbar-brand-color, #fff);"><span>大黒天</span> &nbsp; Daikoku</a></div>
         </div>
       </header>
-      <div class="jumbotron text-center mt-5">
+      <div class="jumbotron col-12 text-center mt-5">
         <h1 class="mb-5">Error - @message</h1>
         <div class="col-6 offset-3">
           <img src="/assets/images/daikoku.svg" alt="logo Daikoku" class="img-fluid" />
