fix margin for Reset pwd

--- a/daikoku/javascript/src/style/layout/sidebar.scss
+++ b/daikoku/javascript/src/style/layout/sidebar.scss
@@ -56,7 +56,7 @@
 }
 
 .sidebar .nav-link.active,.sidebar .nav-link.active .fas  {
-  color: $link-color;
+  color: $menu-text-hover-color;
   background-color: $menu-text-hover-bg-color;
 }
 
