update tenants skin property

--- a/daikoku/javascript/src/components/backoffice/billing/teamBilling.scss
+++ b/daikoku/javascript/src/components/backoffice/billing/teamBilling.scss
@@ -33,7 +33,7 @@
 }
 
 .api__billing__card__container {
-  background-color: #ececec;
+ // background-color: #ececec;
   margin-left: 6px;
   margin-top: 10px;
 
