--- a/daikoku/javascript/src/components/inputs/datepicker.css
+++ b/daikoku/javascript/src/components/inputs/datepicker.css
@@ -6,7 +6,7 @@
 }
 
   .ant-calendar-picker {
-    background-color: #f9fafb;
+   /* background-color: #f9fafb;*/
     border-radius: 4px;
     padding: 5px;
 }
