--- a/daikoku/javascript/src/style/components/avatarWithAction.scss
+++ b/daikoku/javascript/src/style/components/avatarWithAction.scss
@@ -62,7 +62,7 @@
             justify-content: center;
 
             font-weight: 500;
-            color: #333;
+           // color: #333;
         }
     
         //action limit 4 actions for position
