--- a/daikoku/javascript/src/style/components/tiles.scss
+++ b/daikoku/javascript/src/style/components/tiles.scss
@@ -16,8 +16,8 @@
 .home-tile{
   width: 400px;
   height: 200px;
-  background-color: $additionalContent-bg-color;
-  color:$additionalContent-text-color;
+  background-color: $aside-bg-color;
+  color:$aside-text-color;
   margin-top: 5px;
   margin-right: 5px;
   display: flex;
