--- a/daikoku/javascript/src/style/components/form.scss
+++ b/daikoku/javascript/src/style/components/form.scss
@@ -1,6 +1,19 @@
-.fake-form-control {
-  background-color: #eee;
-  border-radius: 3px;
-  padding: 8px;
-  color:#495057;
+.form-control, .form-control:focus {
+  background-color: $form-bg-color;
+  color:$form-text-color;
+  border-color:$form-border-color;
 }
+
+.form-control:disabled, .form-control[readonly] {
+  background-color: grey;
+  color: #e2e2e2;
+}
+
+.fake-form-control {
+    border-radius: 3px;
+    padding: 8px;
+    background-color: $form-bg-color;
+    color:$form-text-color;
+    border: 1px solid $form-border-color;
+}
+
