--- a/daikoku/javascript/src/style/components/reactTable.scss
+++ b/daikoku/javascript/src/style/components/reactTable.scss
@@ -2,11 +2,11 @@
 .ReactTable {
 	border: none !important;
   font-size: 14px;
-	background-color: $table-bg-color;
+	background-color: $form-bg-color;
 }
 .ReactTable input {
-		border-radius: 4px;
-		border: none;
+	border-radius: 4px;
+	border: none;
 }
 
 .ReactTable	.rt-td {
