--- a/daikoku/javascript/src/style/layout/sidebar.scss
+++ b/daikoku/javascript/src/style/layout/sidebar.scss
@@ -11,7 +11,7 @@
   /* Height of navbar */
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
   font-size: 14px;
-  background-color: $sidebar-bg-color;
+  background-color: $aside-bg-color;
   @media screen and (max-width: 768px) {
       top: 55px;
   }
@@ -47,7 +47,7 @@
 
 .sidebar .nav-link {
   font-weight: 500;
-  color: $additionalContent-text-color;
+  color: $aside-text-color;
 }
 
 .sidebar .nav-link .fas {
