--- a/daikoku/javascript/src/style/layout/style.scss
+++ b/daikoku/javascript/src/style/layout/style.scss
@@ -36,6 +36,9 @@ a:hover {
   cursor: not-allowed;
 }
 
+hr{
+  border-top-color: $form-border-color;
+}
 .word-break {
   word-break: break-all;
 }
@@ -82,8 +85,10 @@ a.nav-link.active {
   }
 }
 
-.album {
+
+.section{
   background-color: $section-bg-color;
+  color:$section-text-color;
 }
 
 .underline-on-hover:hover {
@@ -91,8 +96,8 @@ a.nav-link.active {
 }
 
 .additionalContent {
-  background-color: $additionalContent-bg-color;
-  color:$additionalContent-text-color;
+  background-color: $aside-bg-color;
+  color:$aside-text-color;
 }
 
 .navDocumentation ul {
@@ -123,7 +128,7 @@ a.nav-link.active {
   position: fixed;
   bottom: 0;
   height: 60px;
-  background-color: white;
+  background-color: $body-bg-color;
   width: 100%;
   left: 1px;
   padding-top: 10px;
@@ -157,11 +162,13 @@ img:hover+.changePicture,.changePicture:hover{
   width: 150px;
 }
 
+.nav-tabs{
+  border-color: $btn-border-color;
+}
 .nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
-
-    color: $menu-text-color;
-    background-color: $menu-text-hover-bg-color;
-
+    color: $btn-text-color;
+    background-color: $btn-bg-color;
+    border-color: $btn-border-color;
 }
 
 /* rwd */
@@ -184,7 +191,7 @@ img:hover+.changePicture,.changePicture:hover{
 }
 @media screen and (max-width: 540px) {
   .nav-tabs .nav-item {
-    border: 1px solid #7b96b1;
+    border: 1px solid $btn-border-color;
   }
 
   .nav-tabs .nav-item:first-child {
@@ -194,7 +201,7 @@ img:hover+.changePicture,.changePicture:hover{
 
   .nav-tabs .nav-item.show .nav-link,
   .nav-tabs .nav-link.active {
-    background-color: #e7ecef;
+    background-color: $btn-bg-color;
   }
 
   .onglets {
