--- a/daikoku/javascript/src/style/components/modal.scss
+++ b/daikoku/javascript/src/style/components/modal.scss
@@ -1,8 +1,8 @@
 @import '../variables';
 
 .modal-header{
-  background-color: $navbar-bg-color;
-  color: $navbar-text-color;
+  background-color: $body-bg-color;
+  color: $body-text-color;
 }
 
 .modal-content{
