--- a/daikoku/javascript/src/style/layout/login.scss
+++ b/daikoku/javascript/src/style/layout/login.scss
@@ -9,7 +9,7 @@
       background-color: $menu-bg-color;
 
       .organisation__header {
-        border-bottom: 1px solid $section-bottom-color;
+        border-bottom: 1px solid $section-border-color;
         position: relative;
         background-color: $section-bg-color;
         color:$section-text-color;
