--- a/daikoku/javascript/src/style/main.scss
+++ b/daikoku/javascript/src/style/main.scss
@@ -6,7 +6,9 @@
 @import 'layout/sidebar';
 @import 'layout/navbar';
 @import 'layout/login';
+@import 'layout/teamBilling';
 
+@import "components/antCalandar";
 @import 'components/avatarWithAction';
 @import 'components/apicard';
 @import 'components/badge';
