--- a/daikoku/javascript/src/style/layout/teamBilling.scss
+++ b/daikoku/javascript/src/style/layout/teamBilling.scss
@@ -1,3 +1,5 @@
+@import '../variables.scss';
+
 .month__and__total {
   width: 100%;
   display: flex;
@@ -10,7 +12,8 @@
   flex-grow: 1;
   display: flex;
   justify-content: space-between;
-  border: 1px solid #bbc9d8;
+  //border: 1px solid #bbc9d8;
+  background-color: $aside-bg-color;
 
   .title__container__bloc {
     display: flex;
@@ -22,7 +25,7 @@
   }
 
   .pricing__zone {
-    border: 1px solid #ececec;
+    //border: 1px solid #ececec;
     padding: 5px;
 
     .label {
@@ -39,8 +42,8 @@
 
   .api__billing__card {
     cursor: pointer;
-    background-color: #fff;
-    border: 1px solid #e8e8e8;
+    background-color: $aside-bg-color;
+    //border: 1px solid #e8e8e8;
     padding: 10px;
     width: 160px;
     text-align: center;
@@ -109,7 +112,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 20px;
-    color: #333;
+    color: $link-color;
     padding: 15px 5px;
 
     i.quit {
