--- a/daikoku/javascript/src/style/main.scss
+++ b/daikoku/javascript/src/style/main.scss
@@ -7,6 +7,7 @@
 @import 'layout/navbar';
 @import 'layout/login';
 @import 'layout/teamBilling';
+@import 'layout/darkmode';
 
 @import "components/antCalandar";
 @import 'components/avatarWithAction';
