--- a/daikoku/javascript/src/style/layout/style.scss
+++ b/daikoku/javascript/src/style/layout/style.scss
@@ -176,7 +176,7 @@ img:hover+.changePicture,.changePicture:hover{
 }
 
 /* rwd */
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 576px) {
   .col-form-label {
     text-align: right;
   }
@@ -196,7 +196,7 @@ img:hover+.changePicture,.changePicture:hover{
 @media screen and (max-width: 540px) {
   .nav-tabs {
     .nav-item {
-      border: 1px solid $btn-border-color;
+    //  border: 1px solid $btn-border-color;
     }
 
     .nav-tabs .nav-item:first-child {
