WIP - better color input for tenant color theme updator

--- a/daikoku/javascript/src/style/variables.scss
+++ b/daikoku/javascript/src/style/variables.scss
@@ -1,54 +1,54 @@
 
-$body-text-color:#{"var(--body-text-color, #212529)"};
-$body-bg-color:#{"var(--body-bg-color, #fff)"};
+$body-text-color:#{"var(--body-text-color, #212529)"};//body
+$body-bg-color:#{"var(--body-bg-color, #ff6758)"};//body
 
-$link-color: #{"var(--link-color, #7f96af)"};
-$link-hover-color: #{"var(--link--hover-color, #8fa6bf)"};
+$link-color: #{"var(--link-color, #7f96af)"};//link
+$link-hover-color: #{"var(--link--hover-color, #8fa6bf)"};//link
 
-$navbar-bg-color: #{"var(--navbar-bg-color, #7f96af)"};
-$navbar-brand-color: #{"var(--navbar-brand-color, #fff)"};
+$navbar-bg-color: #{"var(--navbar-bg-color, #7f96af)"};//navbar
+$navbar-brand-color: #{"var(--navbar-brand-color, #fff)"};//navbar
 
-$aside-text-color:#{"var(--sidebar-text-color, #000)"};
-$aside-bg-color: #{"var(--sidebar-bg-color, #f8f9fa)"};
+$aside-text-color:#{"var(--sidebar-text-color, #000)"};//sidebar
+$aside-bg-color: #{"var(--sidebar-bg-color, #f8f9fa)"};//sidebar
 
-$menu-bg-color:#{"var(--menu-bg-color, #fff)"};
-$menu-text-color:#{"var(--menu-text-color, #212529)"};
-$menu-text-hover-bg-color:#{"var(--menu-text-hover-bg-color, #9bb0c5)"};
-$menu-text-hover-color:#{"var(--menu-text-hover-color, #fff)"};
+$menu-bg-color:#{"var(--menu-bg-color, #fff)"};//menu
+$menu-text-color:#{"var(--menu-text-color, #212529)"};//menu
+$menu-text-hover-bg-color:#{"var(--menu-text-hover-bg-color, #9bb0c5)"};//menu
+$menu-text-hover-color:#{"var(--menu-text-hover-color, #fff)"};//menu
 
-$btn-bg-color: #{"var(--btn-bg-color, #fff)"};
-$btn-bg-hover-color: #{"var(--btn-bg-hover-color, #fff)"};
-$btn-text-color: #{"var(--btn-text-color, #495057)"};
-$btn-text-hover-color: #{"var(--btn-text-hover-color, #495057)"};
-$btn-border-color: #{"var(--btn-border-color, #97b0c7)"};
-
-
-$section-bg-color:  #{"var(--section-bg-color, #f8f9fa)"};
-$section-text-color:#{"var(--section-text-color, #6c757d)"};
-$section-border-color:  #{"var(--section-bottom-color, #eee)"};
-
-$form-text-color:#{"var(--form-text-color, #000)"};
-$form-border-color:#{"var(--form-border-color, #586069)"};
-$form-bg-color:#{"var(--form-bg-color, #fff)"};
-
-$form-select-focused-color:#{"var(--form-select-focused-color, #fff)"};
-$form-select-focused-text-color:#{"var(--form-select-focused-text-color, #ddd)"};
-$form-select-hover-color:#{"var(--form-select-hover-color, #ccc)"};
-$form-select-hover-text-color:#{"var(--form-select-hover-text-color, #aaa)"};
-
-$badge-tags-bg-color:#{"var(--badge-tags-bg-color, #ffc107)"};
-$badge-tags-bg-hover-color:#{"var(--badge-tags-bg-hover-color, #ffe1a7)"};
-$badge-tags-text-color:#{"var(--badge-tags-text-color, #212529)"};
+$btn-bg-color: #{"var(--btn-bg-color, #fff)"};//button
+$btn-bg-hover-color: #{"var(--btn-bg-hover-color, #fff)"};//button
+$btn-text-color: #{"var(--btn-text-color, #495057)"};//button
+$btn-text-hover-color: #{"var(--btn-text-hover-color, #495057)"};//button
+$btn-border-color: #{"var(--btn-border-color, #97b0c7)"};//button
 
 
-$error-color: #{"var(--error-color, #ff6347)"};
-$error-hover-color: #{"var(--error--hover-color, #ffa494)"};
-$success-color: #{"var(--success-color, #4F8A10)"};
-$success-hover-color: #{"var(--success-hover-color, #76cf18)"};
+$section-bg-color:  #{"var(--section-bg-color, #f8f9fa)"};//body
+$section-text-color:#{"var(--section-text-color, #6c757d)"};//body
+$section-border-color:  #{"var(--section-bottom-color, #eee)"};//body
 
-$pagination-text-color:#{"var(--pagination-text-color, #586069)"};
-$pagination-border-color:#{"var(--pagination-border-color, #586069)"};
+$form-text-color:#{"var(--form-text-color, #000)"};//form
+$form-border-color:#{"var(--form-border-color, #586069)"};//form
+$form-bg-color:#{"var(--form-bg-color, #fff)"};//form
 
-$table-bg-color:#{"var(--table-bg-color, #f8f9fa)"};
+$form-select-focused-color:#{"var(--form-select-focused-color, #fff)"};//form
+$form-select-focused-text-color:#{"var(--form-select-focused-text-color, #ddd)"};//form
+$form-select-hover-color:#{"var(--form-select-hover-color, #ccc)"};//form
+$form-select-hover-text-color:#{"var(--form-select-hover-text-color, #aaa)"};//form
 
-$modal-selection-bg-color: #{"var(--modal-selection-bg-color, rgba(27,31,35,.15))"};
+$badge-tags-bg-color:#{"var(--badge-tags-bg-color, #ffc107)"};//components
+$badge-tags-bg-hover-color:#{"var(--badge-tags-bg-hover-color, #ffe1a7)"};//components
+$badge-tags-text-color:#{"var(--badge-tags-text-color, #212529)"};//components
+
+
+$error-color: #{"var(--error-color, #ff6347)"};//status
+$error-hover-color: #{"var(--error--hover-color, #ffa494)"};//status
+$success-color: #{"var(--success-color, #4F8A10)"};//status
+$success-hover-color: #{"var(--success-hover-color, #76cf18)"};//status
+
+$pagination-text-color:#{"var(--pagination-text-color, #586069)"};//pagination
+$pagination-border-color:#{"var(--pagination-border-color, #586069)"};//pagination
+
+$table-bg-color:#{"var(--table-bg-color, #f8f9fa)"};//components
+
+$modal-selection-bg-color: #{"var(--modal-selection-bg-color, #4F5657)"};//components
