--- a/daikoku/javascript/src/style/main.scss
+++ b/daikoku/javascript/src/style/main.scss
@@ -30,3 +30,4 @@
 @import 'components/switch.scss';
 @import 'components/consumptions.scss';
 @import 'swagger';
+@import "components/recharts.scss";
