--- a/daikoku/javascript/src/style/variables.scss
+++ b/daikoku/javascript/src/style/variables.scss
@@ -1,10 +1,12 @@
 
 $body-text-color:#{"var(--body-text-color, #212529)"};//body
-$body-bg-color:#{"var(--body-bg-color, #ff6758)"};//body
+$body-bg-color:#{"var(--body-bg-color, #fff)"};//body
 
 $link-color: #{"var(--link-color, #7f96af)"};//link
 $link-hover-color: #{"var(--link--hover-color, #8fa6bf)"};//link
 
+$navbar-text-color: #{"var(--navbar-text-color, #fff)"};//navbar
+$navbar-text-hover-color: #{"var(--navbar-text-hover-color, #ccc)"};//navbar
 $navbar-bg-color: #{"var(--navbar-bg-color, #7f96af)"};//navbar
 $navbar-brand-color: #{"var(--navbar-brand-color, #fff)"};//navbar
 
