--- a/daikoku/javascript/src/style/components/modal.scss
+++ b/daikoku/javascript/src/style/components/modal.scss
@@ -1,19 +1,10 @@
 @import '../variables';
 
-.modal-header{
-  background-color: $navbar-bg-color;
-  color: $navbar-text-color;
-}
-.modal-body,.modal-footer{
+.modal-header, .modal-content, .modal-body, .modal-footer{
   background-color: $body-bg-color;
+  color: $body-text-color;
 }
-.modal-content{
-  background-color: initial;
-  color:#fff;
-  .btn:hover,.btn:focus {
-    color: #fff;
-  }
-}
+
 .modal-footer .btn-success,.modal-footer .btn-danger{
   background: none;
 }
@@ -23,18 +14,8 @@
   background-color: rgba(black, 0.8);
 }
 
-//TeamSelectionModal
-
-// .close-modal {
-//   cursor: pointer;
-//
-//   &:hover {
-//     color: black;
-//   }
-// }
 
 .modal-description {
-  color: black;
   margin-bottom: 15px;
   font-weight: 700;
 }
