--- a/daikoku/javascript/src/style/main.scss
+++ b/daikoku/javascript/src/style/main.scss
@@ -6,7 +6,10 @@
 @import 'layout/sidebar';
 @import 'layout/navbar';
 @import 'layout/login';
+@import 'layout/teamBilling';
+@import 'layout/darkmode';
 
+@import "components/antCalandar";
 @import 'components/avatarWithAction';
 @import 'components/apicard';
 @import 'components/badge';
@@ -27,3 +30,4 @@
 @import 'components/switch.scss';
 @import 'components/consumptions.scss';
 @import 'swagger';
+@import "components/recharts.scss";
