--- a/daikoku/javascript/src/style/layout/style.scss
+++ b/daikoku/javascript/src/style/layout/style.scss
@@ -36,6 +36,9 @@ a:hover {
   cursor: not-allowed;
 }
 
+hr{
+  border-top-color: $form-border-color;
+}
 .word-break {
   word-break: break-all;
 }
@@ -63,7 +66,7 @@ main {
 .fa-xxs {
   font-size: 0.5em;
 }
-/*  */
+
 .api-description > p {
   text-align: justify;
 }
@@ -82,8 +85,10 @@ a.nav-link.active {
   }
 }
 
-.album {
+
+.section,.album{
   background-color: $section-bg-color;
+  color:$section-text-color;
 }
 
 .underline-on-hover:hover {
@@ -91,8 +96,8 @@ a.nav-link.active {
 }
 
 .additionalContent {
-  background-color: $additionalContent-bg-color;
-  color:$additionalContent-text-color;
+  background-color: $aside-bg-color;
+  color:$aside-text-color;
 }
 
 .navDocumentation ul {
@@ -123,7 +128,7 @@ a.nav-link.active {
   position: fixed;
   bottom: 0;
   height: 60px;
-  background-color: white;
+  background-color: $body-bg-color;
   width: 100%;
   left: 1px;
   padding-top: 10px;
@@ -157,15 +162,21 @@ img:hover+.changePicture,.changePicture:hover{
   width: 150px;
 }
 
-.nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
-
-    color: $menu-text-color;
-    background-color: $menu-text-hover-bg-color;
-
+.nav-tabs{
+  border-color: $btn-border-color;
+  .nav-link:hover,.nav-link:focus{
+      background-color: $btn-bg-hover-color;
+      color: $btn-text-hover-color;
+  }
+  .nav-link.active, .nav-item.show .nav-link {
+    color: $btn-text-color;
+    background-color: $btn-bg-color;
+    border-color: $btn-border-color;
+  }
 }
 
 /* rwd */
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 576px) {
   .col-form-label {
     text-align: right;
   }
@@ -183,20 +194,18 @@ img:hover+.changePicture,.changePicture:hover{
   }
 }
 @media screen and (max-width: 540px) {
-  .nav-tabs .nav-item {
-    border: 1px solid #7b96b1;
-  }
+  .nav-tabs {
 
-  .nav-tabs .nav-item:first-child {
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-  }
+    .nav-tabs .nav-item:first-child {
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+    }
 
-  .nav-tabs .nav-item.show .nav-link,
-  .nav-tabs .nav-link.active {
-    background-color: #e7ecef;
+  .nav-item.show .nav-link,
+  .nav-link.active {
+    background-color: $btn-bg-color;
   }
-
+}
   .onglets {
     padding-left: 15px;
   }
