--- a/daikoku/javascript/src/style/components/switch.scss
+++ b/daikoku/javascript/src/style/components/switch.scss
@@ -45,11 +45,15 @@
 }
 
 input:checked + .slider {
-  background-color: #5cb85c;
+  background-color: $success-color;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #5cb85c;
+  box-shadow: 0 0 1px $success-color;
+}
+
+input:disabled + .slider {
+  background-color: #ccc;
 }
 
 input:checked + .slider:before {
@@ -70,9 +74,9 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
-.switch--loading {
+.switch--disabled {
   label {
     pointer-events: none;
   }
-  cursor: wait;
+  cursor: not-allowed;
 }
