--- a/daikoku/javascript/src/style/components/apicard.scss
+++ b/daikoku/javascript/src/style/components/apicard.scss
@@ -73,7 +73,7 @@
   border: none;
   background-color: $menu-bg-color;
   margin: 0;
-  height: 250px;
+ // height: 250px;
   overflow: scroll;
 }
 
