FIX #47 - add customizable footer for all frontend pages of tenants

--- a/daikoku/javascript/src/style/main.scss
+++ b/daikoku/javascript/src/style/main.scss
@@ -31,3 +31,4 @@
 @import 'components/consumptions.scss';
 @import 'swagger';
 @import "components/recharts.scss";
+@import 'components/footer.scss';
