--- a/daikoku/javascript/src/style/variables.scss
+++ b/daikoku/javascript/src/style/variables.scss
@@ -10,6 +10,9 @@ $navbar-text-hover-color: #{"var(--navbar-text-hover-color, #ccc)"};//navbar
 $navbar-bg-color: #{"var(--navbar-bg-color, #7f96af)"};//navbar
 $navbar-brand-color: #{"var(--navbar-brand-color, #fff)"};//navbar
 
+$footer-text-color: #{"var(--footer-text-color, #fff)"};//footer
+$footer-bg-color: #{"var(--footer-bg-color, #7f96af)"};//footer
+
 $aside-text-color:#{"var(--sidebar-text-color, #000)"};//sidebar
 $aside-bg-color: #{"var(--sidebar-bg-color, #f8f9fa)"};//sidebar
 
