WIP #39 - Fix unread notification indicator

--- a/daikoku/javascript/src/style/components/notification.scss
+++ b/daikoku/javascript/src/style/components/notification.scss
@@ -23,7 +23,7 @@
   right: 10px;
   background-color: tomato;
   border-radius: 50%;
-  border: 2px solid #7f96af;
+  border: 2px solid $navbar-bg-color;
   box-sizing: content-box;
 }
 
